add example notebook showing how to connect to and analyze graph from neo4j

--- a/notebooks/pgh bike data.ipynb
+++ b/notebooks/pgh bike data.ipynb
@@ -94,7 +94,7 @@
     }
    ],
    "source": [
-    "vertices = %cypher http://neo4j:neo4j@52.186.120.119:7474/db/data \\\n",
+    "vertices = %cypher http://neo4j:neo4j@xx.xxx.xxx.xxx:7474/db/data \\\n",
     "            match p = (a:Station) \\\n",
     "            Return a.stationId as start_node, a.stationName as start_name, \\\n",
     "            a.latitude as lat, a.longitude as lng \n",
@@ -216,7 +216,7 @@
     }
    ],
    "source": [
-    "edges = %cypher http://neo4j:neo4j@52.186.120.119:7474/db/data \\\n",
+    "edges = %cypher http://neo4j:neo4j@xx.xxx.xxx.xxx:7474/db/data \\\n",
     "            match p = (a:Station)-[:TRIP_TO]->(b:Station) \\\n",
     "            Return a.stationId as start_node, a.stationName as start_name, \\\n",
     "            b.stationId as finish_node, b.stationName as finish_name, sum(1) as w"
